# hook-raft

./: .gitignore  Cargo.toml  README.md  shell.nix
.github/workflows/: rust.yml
example/hook/: .gitignore  Cargo.toml  Makefile
example/hook/src/: main.rs
example/hook/test/: common_settings.toml  interface.sh  run.sh
example/hook/test/server1/: prepare_term  retreive_n_term  server_settings.toml  settings.toml  switch_status
example/hook/test/server2/: prepare_term  server_settings.toml  settings.toml
example/hook/test/server3/: commit_term  prepare_term  server_settings.toml  settings.toml
example/hook/test/server4/: append_term  pre_append_term  prepare_term  server_settings.toml  settings.toml
example/hook/test/server5/: prepare_term  retreive_term  server_settings.toml  settings.toml
specs/: initial_readme.md
specs/hook-scripts/: README.md
specs/initial flow charts/: appendTerm.md  candidate_timeout.md  init.md  leader_workflow.md  on_status_change.md  requestVote.md
specs/tests/: test_plan.md
src/: lib.rs  log_entry.rs  node.rs
src/api/: client.rs  io_msg.rs  mod.rs  server.rs  url.rs
src/api/mock/: mock_client.rs
src/api/tests/: mod.rs
src/common/: config.rs  error.rs  hook_trait.rs  mod.rs  scripts.rs
src/state/: mod.rs  node.rs  sm_impl.rs
src/workflow/: append_term.rs  candidate.rs  follower.rs  init.rs  leader.rs  mod.rs  request_vote.rs
src/workflow/test/: hook.rs  mock.rs  mod.rs  tests_append_term.rs  tests_init.rs  tests_send_term.rs
src/workflow/tools/: commiting.rs  leader_tools.rs  mod.rs
tests/: classic.py
