[package]
name = "hook-raft"
version = "0.1.0"
edition = "2021"

[dependencies]
config = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.17", features = ["full"] }
lazy_static = "1"
rand = "0.8.5"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4.31"

[dev-dependencies]
serial_test = "0.6"
tracing-test = "0.2"

[features]
mock_api = []
